feat(webUI): run tests from the web interface
Closes: #30